Features:
 * Added a configuration button (looks like a cog) to the "Object Panel". Opens up a configuration popup.
 * Holding the Shift key will increase a panning speed when moving with arrow keys.
 * Added a preference to enable an alternative, "DM-like", scroll behavior.

Fixes:
 * Subtypes without a different name from it's parent had the wrong name.

Tweaks:
 * Added a changing of the mouse cursor while holding the Space key to show the panning mode is changed.
 * In "Select" mode, when nothing is selected, tile under the mouse will be copied.
 * SpacemanDMM parser updated to version 1.5.0.
 * Reduced CPU usage for environment tree filtering.

--------------------------------------
 v1.6.0 (2020-06-27)
--------------------------------------

Features:
 * Added support for UI scaling! Interface could be scaled from "Preferences" window.
 * Added switchable interface themes.
 * Added "Synchronize Maps View" option. When enabled all maps will share the same "camera" location.
   Helpful for multi-z maps with levels per-file.
 * "Edit Variables" window now has a "Reset Variable To Default" button for modified variables.
 * Added advanced "Unknown Types Replacer" tool. Works in the same way DM does.
   You open a map with unknown type - you are able to replace those types with something else.
   Tool also has a feature to modify objects variables as well.

Fixes:
 * Inability to switch between maps with the same name.

Tweaks:
 * "Show Modified Variables" toggle state won't be reset between "Edit Variables" windows.

--------------------------------------
 v1.5.0 (2020-05-26)
--------------------------------------

Features:
 * Added a fullscreen mode! Use "Window->Fullscreen" or F11 hotkey to toggle.

Fixes:
 * Incorrect window maximization on start. The window will cover the screen correctly.

--------------------------------------
 v1.4.0 (2020-05-24)
--------------------------------------

Features:
 * New appearance!